--- a/Builds/VisualStudio2012/open-ephys.vcxproj
+++ b/Builds/VisualStudio2012/open-ephys.vcxproj
@@ -267,6 +267,8 @@
     <ClCompile Include="..\..\Source\AccessClass.cpp"/>
     <ClCompile Include="..\..\Source\Network\PracticalSocket.cpp"/>
     <ClCompile Include="..\..\Source\Audio\AudioComponent.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\SpikePositionNode\SpikePositionEditor.cpp"/>
+    <ClCompile Include="..\..\Source\Processors\SpikePositionNode\SpikePositionNode.cpp"/>
     <ClCompile Include="..\..\Source\Processors\OscNode\OscEditor.cpp"/>
     <ClCompile Include="..\..\Source\Processors\OscNode\OscNode.cpp"/>
     <ClCompile Include="..\..\Source\Processors\OscNode\OscServer.cpp"/>
@@ -1520,6 +1522,8 @@
     <ClInclude Include="..\..\Source\AccessClass.h"/>
     <ClInclude Include="..\..\Source\Network\PracticalSocket.h"/>
     <ClInclude Include="..\..\Source\Audio\AudioComponent.h"/>
+    <ClInclude Include="..\..\Source\Processors\SpikePositionNode\SpikePositionEditor.h"/>
+    <ClInclude Include="..\..\Source\Processors\SpikePositionNode\SpikePositionNode.h"/>
     <ClInclude Include="..\..\Source\Processors\OscNode\OscEditor.h"/>
     <ClInclude Include="..\..\Source\Processors\OscNode\OscNode.h"/>
     <ClInclude Include="..\..\Source\Processors\OscNode\OscServer.h"/>
